# line_follower_ws

./: README.md
src/yellow_detector/: CMakeLists.txt  package.xml
src/yellow_detector/config/: detector_params.yaml
src/yellow_detector/launch/: yellow_detector.launch
src/yellow_detector/scripts/: yellow_detection_thresholder.py
src/yellow_detector/src/: yellow_detector_node.cpp
